updated meta tag of base.pug

--- a/views/base.pug
+++ b/views/base.pug
@@ -5,7 +5,7 @@ html
             meta(charset='UTF-8')
             meta(name='viewport' content='width=device-width, initial-scale=1.0')
             //meta(http-equiv='Content-Security-Policy' content='connect-src http://127.0.0.1:3000 https://*.tiles.mapbox.com https://api.mapbox.com https://events.mapbox.com')
-            meta(http-equiv='Content-Security-Policy' content='connect-src https://*.tiles.mapbox.com https://api.mapbox.com https://events.mapbox.com')
+            meta(http-equiv='Content-Security-Policy' content='connect-src https://natours-d0f9.onrender.com https://*.tiles.mapbox.com https://api.mapbox.com https://events.mapbox.com')
             link(rel='stylesheet' href='/css/style.css')
             link(rel='shortcut icon' type='image/png' href='/img/favicon')
             link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
